Add Lola Profile Picture
Got Lazy didn't finish

--- a/AskLolaLingo/app/src/main/res/values/strings.xml
+++ b/AskLolaLingo/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AskLolaLingo</string>
+    <string name="lola_image">This is a Lola Image</string>
 </resources>
